Potential fix for SimpleEvent dots on iOS

--- a/Ext.ux.CalendarSimpleEvents/resources/scss/Ext.ux.CalendarSimpleEvents.scss
+++ b/Ext.ux.CalendarSimpleEvents/resources/scss/Ext.ux.CalendarSimpleEvents.scss
@@ -3,6 +3,8 @@
 
 	td
 	{
+		position: relative;
+	
 		span.simple-event-wrapper, span.simple-event-wrapper-multi
 		{
 			position: absolute;
